# softwarethingy

./: .gitignore  CONTRIBUTING.md  Diagnose LunaRad-PEEK.command  Diagnose LunaRad.command  LICENSE  Launch LunaRad-PEEK.command  Launch LunaRad.command  README.md  generate_paper_figures.py  pyproject.toml  run.py  run_validation.py
docs/: assumptions_and_limitations.txt  methods_documentation.txt  paper_methods_section.txt  reference_panel_content.txt  scientific_guardrails_spec.txt
lunarad_peek/: __init__.py
lunarad_peek/analysis/: engine.py
lunarad_peek/app/: main.py  state.py
lunarad_peek/docs/: assumptions.md  references.json
lunarad_peek/geometry/: primitives.py  raycaster.py  scene.py  stl_io.py
lunarad_peek/materials/: material.py
lunarad_peek/radiation/: environments.py
lunarad_peek/ui/: main_window.py  viewer3d.py
lunarad_peek/ui/dialogs/: methods_dialog.py
lunarad_peek/ui/tabs/: analysis_tab.py  environment_tab.py  geometry_tab.py  materials_tab.py  visualization_tab.py
lunarad_peek/validation/: tests.py
lunarad_peek/visualization/: plots.py
tests/: test_run_launcher.py  test_validation_suite.py
