[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lunarad"
version = "1.0.0a1"
description = "Conceptual Radiation Visualization and Shielding-Analysis Tool for Lunar Habitats"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LunaRad Research Team"},
]

dependencies = [
    "PySide6>=6.6",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pyvista>=0.42",
    "pyvistaqt>=0.11",
    "trimesh>=4.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
lunarad = "lunarad_peek.app.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
