[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lunarad"
version = "1.0.0a1"
description = "Conceptual Radiation Visualization and Shielding-Analysis Tool for Lunar Habitats"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "LunaRad Research Team"},
]
keywords = ["lunar", "radiation", "shielding", "visualization", "habitat", "science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "PySide6>=6.6",
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pyvista>=0.42",
    "pyvistaqt>=0.11",
    "trimesh>=4.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
lunarad = "lunarad_peek.app.main:main"

[project.urls]
Homepage = "https://github.com/Anish091234/softwarethingy"
Repository = "https://github.com/Anish091234/softwarethingy"
Issues = "https://github.com/Anish091234/softwarethingy/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
